Fixed height of lore content on small screen sizes

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ body {
     #lore-content {
       width: 75%;
       max-width: 380px;
-      height: 500px;
+      height: 600px;
     }
   }
 
